Closed Bug 381174 Opened 17 years ago Closed 17 years ago

locale not exposed for document frame

Categories

(Core :: Disability Access APIs, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: scott, Assigned: aaronlev)

References

(Blocks 1 open bug)

Details

(Keywords: access)

Attachments

(2 files, 2 obsolete files)

The locale is not exposed for the document frame node. Please note http://lxr.mozilla.org/seamonkey/source/accessible/src/atk/nsMaiInterfaceDocument.cpp#55
Blocks: htmla11y
Keywords: access
Attached patch Needs testing (obsolete) — Splinter Review
Attachment #265339 - Attachment is obsolete: true
Comment on attachment 265589 [details] [diff] [review] Works correctly if content-language is set properly. Test on www.hallo.de and it reports "de". On pages that don't set the content-language you'd have to assume it's the same locale as the system, I guess.
Attachment #265589 - Attachment description: For some reason I keep getting an empty string from |doc->GetHeaderData(nsAccessibilityAtoms::headerContentLanguage, locale);| → Works correctly if content-language is set properly.
Attachment #265589 - Flags: review?(surkov.alexander)
Attachment #265589 - Attachment is obsolete: true
Attachment #265589 - Flags: review?(surkov.alexander)
1) Try on <body> 2) Try on <html> 3) Try content-language 4) If we don't know the language we'll return NULL
Attachment #265609 - Flags: review?(surkov.alexander)
Comment on attachment 265609 [details] [diff] [review] The best we can get -- many pages don't indicate what language they're in >+ if (!content ) { nit: please remove space
Attachment #265609 - Flags: review?(surkov.alexander) → review+
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Attached patch bustage fixSplinter Review
aaronlev, this was checked in as a bustage fix. Can you please OK this?
Comment on attachment 265765 [details] [diff] [review] bustage fix Sorry, I missed this. Thank your for the fix.
Attachment #265765 - Flags: review+
I'm sorry about that -- it was still green when I got pulled away by family issues.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: