Bug 381174. Locale not exposed for ATK document interface. r=surkov