accessible/src/atk/nsMaiInterfaceDocument.cpp
@@ -40,6 +40,7 @@
 
 #include "nsAccessibleWrap.h"
 #include "nsMaiInterfaceDocument.h"
+#include "nsAccessibilityAtoms.h"
 
 const char *const kDocTypeName = "W3C-doctype";
 const char *const kDocUrlName = "DocURL";
@@ -53,12 +54,32 @@ documentInterfaceInitCB(AtkDocumentIface *aIface)
         return;
 
     /*
-     * We don't support get_document, get_locale and set_attribute right now.
+     * We don't support get_document or set_attribute right now.
      * get_document_type is deprecated, we return DocType in
      * get_document_attribute_value and get_document_attributes instead.
      */
     aIface->get_document_attributes = getDocumentAttributesCB;
     aIface->get_document_attribute_value = getDocumentAttributeValueCB;
+    aIface->get_document_locale = getDocumentLocaleCB;
+}
+
+const gchar *
+getDocumentLocaleCB(AtkDocument *aDocument)
+{
+    nsAccessibleWrap *accWrap = GetAccessibleWrap(ATK_OBJECT(aDocument));
+    NS_ENSURE_TRUE(accWrap, nsnull);
+
+    nsCOMPtr<nsIAccessNode> docAccessNode;
+    accWrap->QueryInterface(NS_GET_IID(nsIAccessNode),
+                            getter_AddRefs(docAccessNode));
+    NS_ENSURE_TRUE(accDocument, nsnull);
+
+    nsAutoString locale;
+    docAccessNode->GetLanguage(getter_AddRefs(locale));
+    if (locale.IsEmpty()) {
+      return nsnull;
+    }
+    return nsAccessibleWrap::ReturnString(locale);
 }
 
 const gchar *
@@ -72,10 +93,10 @@ getDocumentTypeCB(AtkDocument *aDocument)
                             getter_AddRefs(accDocument));
     NS_ENSURE_TRUE(accDocument, nsnull);
 
-    nsAutoString aMimeType;
-    nsresult rv = accDocument->GetMimeType(aMimeType);
+    nsAutoString mimeType;
+    nsresult rv = accDocument->GetMimeType(mimeType);
     NS_ENSURE_SUCCESS(rv, nsnull);
-    return nsAccessibleWrap::ReturnString(aMimeType);
+    return nsAccessibleWrap::ReturnString(mimeType);
 }
 
 static inline GSList *
